Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-1099-g383ea7d https://github.com/reactos/reactos/commit/383ea7d92bf1e38a042f7b130f9f4ee00c1a827e
Description
I tested it in virtualbox with the latest nightly build (reactos-bootcd-0.4.15-dev-1102-gad4c174-x86-gcc-lin-dbg.iso)
I don't remember this bug so it must be a regression.
Attachments
Issue Links
- is blocked by
-
CORE-16165 Support raster fonts (*.fnt and *.fon)
-
- Reopened
-
- relates to
-
CORE-19975 Firefox displays wrong text after enabling raster fonts
-
- Untriaged
-