[FREETYPE][NTGDI] Fix ftGdiGetTextMetricsW return for raster fonts (#7635)

Try to get ready to support raster fonts.
JIRA issue: CORE-17327
- Fix the return value of
  ftGdiGetTextMetricsW function
  for raster fonts.